fix typo on yaml file

--- a/lesson_2/mortgage_calculator_messages.yml
+++ b/lesson_2/mortgage_calculator_messages.yml
@@ -5,4 +5,4 @@ interest_rate: "What is the Interest Rate? (i.e 7 or 7.0)"
 loan_duration: "What is the loan duration in years? (i.e 30)"
 calculate_again: "Do you want to calculate again? Yes(Y) to go again or No(N) to quit"
 choose_yes_or_no: "Must choose Yes(Y) or No(N)"
-good_bye: "Thank you for using the Mortgage calculator. Goodbye"
+goodbye: "Thank you for using the Mortgage calculator. Goodbye"
