fix loan amount validation and error message

--- a/lesson_2/mortgage_calculator_messages.yml
+++ b/lesson_2/mortgage_calculator_messages.yml
@@ -1,7 +1,8 @@
 welcome: "Welcome to Mortgage calculator"
 loan_amount: "What is the total amount of loan in dollars? (i.e 10000)"
-invalid_number: "Please enter a valid positive number."
-invalid_loan_duration: "Please enter a whole positive number for the loan duration"
+invalid_loan_amount: "Please enter a whole positive number for the loan amount."
+invalid_interest_rate: "Please enter a valid positive number for the interest rate."
+invalid_loan_duration: "Please enter a whole positive number for the loan duration."
 interest_rate: "What is the Interest Rate? (i.e 7 or 7.0)"
 loan_duration: "What is the loan duration in years? (i.e 30)"
 calculate_again: "Do you want to calculate again? Yes(Y) to go again or No(N) to quit"
